force-app/main/default/objects/Applicant__c/fields/Billing_Address_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Address Checkbox</label>
    <type>Checkbox</type>
</CustomField>