force-app/main/default/objects/Applicant__c/fields/Custom_field__c.field-meta.xml
<CustomField>
    <fullName>Custom_field__c</fullName>
    <label>Custom field</label>
    <length>20</length>
    <type>Text</type>
</CustomField>