force-app/main/default/objects/Applicant__c/fields/Discount_limit__c.field-meta.xml
<CustomField>
    <fullName>Discount_limit__c</fullName>
    <label>Discount limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>