force-app/main/default/objects/Applicant__c/fields/Email_01__c.field-meta.xml
<CustomField>
    <fullName>Email_01__c</fullName>
    <label>Email 01</label>
    <type>Email</type>
</CustomField>