force-app/main/default/objects/Applicant__c/fields/Industry_Field__c.field-meta.xml
<CustomField>
    <fullName>Industry_Field__c</fullName>
    <label>Industry Field</label>
    <length>20</length>
    <type>Text</type>
</CustomField>