force-app/main/default/objects/Applicant__c/fields/Lead_Rating__c.field-meta.xml
<CustomField>
    <fullName>Lead_Rating__c</fullName>
    <label>Lead Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&quot;Hot&apos;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>