force-app/main/default/objects/Applicant__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>&quot;High&quot;</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&quot;High&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Low&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>