force-app/main/default/objects/Applicant__c/fields/Status_Contracted__c.field-meta.xml
<CustomField>
    <fullName>Status_Contracted__c</fullName>
    <label>Status Contracted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&quot;Contracted&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Uncontracted&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>