force-app/main/default/objects/Applicant__c/fields/Status_field__c.field-meta.xml
<CustomField>
    <fullName>Status_field__c</fullName>
    <label>Status field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&quot;Approved&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Disapproved&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>