force-app/main/default/objects/Applicant__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <label>User.Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>