force-app/main/default/objects/Applicant__c/validationRules/Account_Edit_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Edit_Restriction</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( OwnerId__c  = $User.Id)</errorConditionFormula>
    <errorMessage>You are not the owner of this Account and cannot edit its fields.</errorMessage>
</ValidationRule>