force-app/main/default/objects/Applicant__c/validationRules/Billing_Address_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Address_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Billing_Address_Checkbox__c = TRUE,
  ISBLANK( Billing_Address__c ) ||  ISBLANK( Billing_City__c ) ||  ISBLANK( Billing_Street__c ) 

)</errorConditionFormula>
    <errorMessage>&quot;Billing address fields must be populated when Billing Address checkbox is checked.&quot;</errorMessage>
</ValidationRule>