force-app/main/default/objects/Applicant__c/validationRules/Contact_email_domain_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_email_domain_check</fullName>
    <active>true</active>
    <errorConditionFormula>REGEX (UPPER ( Customer_Email__c ) ,&quot;^[A-z0-9._%+-/!#$%&amp;&apos;*=?^_`{|}~]+@[A-z0-9.-]+\\.[A-Z]{2,4}$&quot;)</errorConditionFormula>
    <errorMessage>ERROR FOUND</errorMessage>
</ValidationRule>