force-app/main/default/objects/Applicant__c/validationRules/Custom_field_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Custom_field_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL( Status_field__c , &quot;Approved&quot;),
   ISBLANK( Custom_field__c )
)</errorConditionFormula>
    <errorMessage>&quot;Custom Field must be filled out when the status is Approved.&quot;</errorMessage>
</ValidationRule>