force-app/main/default/objects/Applicant__c/validationRules/Discount_limit_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_limit_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Discount_limit__c  &gt; 500</errorConditionFormula>
    <errorMessage>&quot;Discount cannot exceed $500.&quot;</errorMessage>
</ValidationRule>