force-app/main/default/objects/Applicant__c/validationRules/Email_domain.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_domain</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Email_01__c , &quot;.*@example\\.com&quot;))</errorConditionFormula>
    <errorMessage>The email domain must be &quot;@example.com&quot;.</errorMessage>
</ValidationRule>