force-app/main/default/objects/Applicant__c/validationRules/High_Priority_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>High_Priority_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Priority__c , &quot;Low&quot;)</errorConditionFormula>
    <errorMessage>&quot;High Priority cases require manager approval.&quot;</errorMessage>
</ValidationRule>