force-app/main/default/objects/Applicant__c/validationRules/Industry_Field_Matching.validationRule-meta.xml
<ValidationRule>
    <fullName>Industry_Field_Matching</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Lead_Source__c , &quot;Webinar&quot;),
    ISBLANK( Industry_Field__c )
)</errorConditionFormula>
    <errorMessage>If Lead Source is &quot;Webinar,&quot; the Lead Industry field must be populated.</errorMessage>
</ValidationRule>