force-app/main/default/objects/Applicant__c/validationRules/Lead_Rating_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Rating_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Lead_Rating__c , &quot;Hot&quot;),
  NOT(ISPICKVAL( Status_Contracted__c , &quot;Uncontracted&quot;))
)</errorConditionFormula>
    <errorMessage>&quot;Lead Rating can only be set to &apos;Hot&apos; when the Status is &apos;Contracted&apos;.&quot;</errorMessage>
</ValidationRule>