force-app/main/default/objects/Applicant__c/validationRules/Start_date_must_be_earlier_than_the_end.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_must_be_earlier_than_the_end</fullName>
    <active>true</active>
    <errorConditionFormula>Start_date__c &gt;= End_date__c</errorConditionFormula>
    <errorMessage>&quot;Start Date must be earlier than End Date.&quot;</errorMessage>
</ValidationRule>