force-app/main/default/objects/Applicant__c/validationRules/Time_interval_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_interval_validation</fullName>
    <active>true</active>
    <errorConditionFormula>(  Closed_date__c   -  Created_date__c ) &gt; 2</errorConditionFormula>
    <errorMessage>&quot;The time between Created Date and End Date cannot exceed 48 hours.&quot;</errorMessage>
</ValidationRule>